# Comfyui_Comfly

./: AiHelper.py  Comfly.py  Comflyapi .json  Comflyapi.json  README.md  __init__.py  comfly_config.py  gitignore.txt  pyproject.toml  requirements.txt  utils.py
.github/workflows/: publish.yml
docs/mjstyle/: mj_art.json  mj_hd.json
github/workflows/: publish.yml
nodes/: nodes_MiniMax.py  nodes_doubao.py  nodes_flux.py  nodes_google.py  nodes_kling.py  nodes_midjourney.py  nodes_openai.py  nodes_qwen.py  nodes_suno.py  nodes_vidu.py
src/split_image/: __init__.py  split.py
web/js/: Comfly_kling_videoPreview.js  Comfly_manager.js  Comfly_mjstyle.js  chat_button.js  comfly.js  drag_handle.js  help_button.js  help_info.js
web/lib/js/: Comfly_mjstyle.js  chat_button.js  comfly.js  help_button.js  split_image.js
workflow/: Comfly Doubao SeedEdit.json  ComflyGeminiAPI.json  Comfly_kling.json  Comfly_lip_sync.json  Comfly_mj.json  comfly-gemmi-editimage.json  comfly-gpt4o-api.json  comfly-kling-V1.0-text2video.json  comfly-kling-image2video.json  comfly-kling-text2video.json  comfly_coze.json  comfly_kling_text2img.json  seedance2.0 上传素材ID 多参工作流.json  seedance2.0 多参工作流.json
